[gd_scene load_steps=10 format=3 uid="uid://p00afaxw3gwm"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_esj83"]
[ext_resource type="FontFile" uid="uid://chuemkmmvqw7h" path="res://Art/Images/font.png" id="1_gpdr2"]
[ext_resource type="Texture2D" uid="uid://cnsmomc68gjwj" path="res://Art/Images/title_doodle.png" id="4_lv7w4"]
[ext_resource type="Script" path="res://Scripts/VolumeSlider.gd" id="4_t8isi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sva3e"]
atlas = ExtResource("4_lv7w4")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_obmw3"]
atlas = ExtResource("4_lv7w4")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0puby"]
atlas = ExtResource("4_lv7w4")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs2xs"]
atlas = ExtResource("4_lv7w4")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_sy38w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sva3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obmw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0puby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs2xs")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_esj83")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180392, 0.180392, 0.180392, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(128, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -20.0
offset_right = 20.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Play"

[node name="AboutButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "About
"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit
"

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -166.5
offset_right = 43.5
offset_bottom = -143.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_gpdr2")
theme_override_font_sizes/font_size = 24
text = "DREAMCAT"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -136.0
offset_top = -60.0
offset_right = 136.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Volume: "

[node name="HSlider" type="HSlider" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.001
script = ExtResource("4_t8isi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(256, 427)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_sy38w")
autoplay = "default"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AboutButton" to="." method="_on_about_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="value_changed" from="HBoxContainer/HSlider" to="HBoxContainer/HSlider" method="_on_value_changed"]
